src/test/ui/issue-26217.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/issue-26217.rs:14:5
   |
LL |     foo::<&'a i32>();
   |     ^^^^^^^^^^^^^^

error[E0131]: `main` function is not allowed to have generic parameters
  --> $DIR/issue-26217.rs:13:8
   |
LL | fn main<'a>() {
   |        ^^^^ `main` cannot have generic parameters

error: aborting due to previous error

For more information about this error, try `rustc --explain E0131`.
